@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2013, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2009-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -114,7 +114,7 @@ fostlib::digester &fostlib::digester::operator << ( const fostlib::string &s ) {
 
 
 fostlib::digester &fostlib::digester::operator << (
-    const boost::filesystem::wpath &filename
+    const boost::filesystem::path &filename
 ) {
     fostlib::digester::impl::check(m_implementation);
     fostlib::progress progress(filename);
