@@ -1,5 +1,5 @@
 /*
-    Copyright 1999-2012, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 1999-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -131,7 +131,7 @@ fostlib::hmac &fostlib::hmac::operator << ( const fostlib::string &data ) {
     return *this << coerce< utf8_string >( data );
 }
 
-fostlib::hmac &fostlib::hmac::operator << ( const boost::filesystem::wpath &filename ) {
-    throw fostlib::exceptions::not_implemented( "fostlib::hmac::operator << ( const boost::filesystem::wpath &filename )" );
+fostlib::hmac &fostlib::hmac::operator << ( const boost::filesystem::path &filename ) {
+    throw fostlib::exceptions::not_implemented( "fostlib::hmac::operator << ( const boost::filesystem::path &filename )" );
 }
 
