@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2009, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2008-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -30,7 +30,7 @@ namespace fostlib {
 
         digester &operator << ( const const_memory_block & );
         digester &operator << ( const string &str );
-        digester &operator << ( const boost::filesystem::wpath &filename );
+        digester &operator << ( const boost::filesystem::path &filename );
 
         std::vector< unsigned char > digest() const;
 
@@ -54,7 +54,7 @@ namespace fostlib {
         }
         hmac &operator << ( const utf8_string &str );
         hmac &operator << ( const string &str );
-        hmac &operator << ( const boost::filesystem::wpath &filename );
+        hmac &operator << ( const boost::filesystem::path &filename );
 
         std::vector< unsigned char > digest() const;
 
