@@ -1,5 +1,5 @@
 /*
-    Copyright 2013-2014, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2013-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -149,7 +149,7 @@ namespace fostlib {
         progress(const json &meta, work_amount upto);
 
         /// Progress recording for a file content
-        progress(const boost::filesystem::wpath &file);
+        progress(const boost::filesystem::path &file);
 
         /// Allow tracking of removal of progress recorders. Not virtual as we're not going to sub-class this
         ~progress();
